# async-multi-query-tsf-rag

./: .gitignore  LICENSE  README.md  pyproject.toml  tsf_rag.ipynb
src/evaluation_rag/: __init__.py  automated_evaluation.py
src/evaluation_rag/rag_ground_truth/: 01_STD_Tranque_GT.xlsx  02_FTD_Filtrado_GT.xlsx  03_TTD_Espesado_GT.xlsx  04_TE_Embalse_GT.xlsx  05_PTD_EnPasta_GT.xlsx
src/evaluation_retrieval/ground_truth_retrieval/: 01_tranque_ground_truth_evaluacion.json  02_filtrado_ground_truth.json  03_espesado_ground_truth.json  04_embalse_ground_truth_evaluacion.json  05_pasta_ground_truth.json
src/evaluation_retrieval/vector_storage/01_cerro_negro_tranque/01_cerro_negro_all_mini_L12_v2/: default__vector_store.json  docstore.json  index_store.json
src/evaluation_retrieval/vector_storage/01_cerro_negro_tranque/01_cerro_negro_all_mini_L6_v2/: default__vector_store.json  docstore.json  index_store.json
src/evaluation_retrieval/vector_storage/01_cerro_negro_tranque/01_cerro_negro_bm25/: corpus.jsonl  corpus.mmindex.json  data.csc.index.npy  indices.csc.index.npy  indptr.csc.index.npy  params.index.json  retriever.json  vocab.index.json
src/evaluation_retrieval/vector_storage/02_kozan_filtrado/02_kozan_nomic/: docstore.json  (+2 more)
src/llms_modules/: __init__.py  async_multi_query_llm.py  llm_evaluador.py  query_rewrite.py
src/prompts/: __init__.py  all_prompts.py
src/rag/: __init__.py  advanced_hybrid_rag.py  advanced_rag.py  async_multi_query_rag.py  hybrid_rag.py  naive_rag.py  propuesta_rag.py
src/utils/: __init__.py  excel_generator_retrieval.py  multi_embedd_utils.py  retrieval_advanced_hybrid.py  retrieval_fake.py
(+15 files in other folders)
