[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "tsf-rag"
version = "0.1.0"
description = "AsyncMultiQuery TSF-RAG System"
authors = [{name = "Gabriel Olmos", email = "gabriel.olmos@pucv.cl"}]
requires-python = ">=3.10"

[tool.setuptools.packages.find]
where = ["src"]